rtest/tests/jsr335/Semantics/LambdaExpressions/EffectivelyFinal/ShouldCompile/syntax15/Test.java
// .result=COMPILE_PASS


public class Test {
	public interface TestInterface {
		public int functMethod(); 
	}

	static int a;
	
	public static void main(String[] args) {
		a = 5;
		a = 2;
		
		TestInterface t = () -> a;
    }
	
}